--- a/in_text/text_data_release.yml
+++ b/in_text/text_data_release.yml
@@ -1,60 +1,64 @@
 title: >-
-  Data release: [your title here]
+  Data release: Multi-source water temperature observations for U.S. streams
 
 
 abstract: >-
-  [a description of this data release]
-      
-authors: ["[NAME 1]", "[NAME 2]"]
-pubdate: 2020 # replace with actual year, e.g., 2020
+  This data release collates stream water temperature records across the United States from four sources: 
+  The National Water Information System (NWIS),  Water Quality Portal (WQP),  Spatial Hydro-Ecological Decision Systems (SHEDS)
+  temperature database, and  NorWeST stream temperature database. Temperature monitoring sites were paired to stream
+  segments from the National Geospatial Fabric. Data were reduced to daily mean, minimum, and maximum temperatures
+  when sub-daily measurements were available. Quality control was conducted by flagging temperature observations that 
+  were outside of three standard deviations of the mean of all temperature records in 1 by 1 degree areas and 6 day time chunks. 
+  
+authors: ["Samantha K. Oliver", "Rasha Atshan", "David Watkins", "Alison Appling", ]
+pubdate: 2021 # replace with actual year, e.g., 2020
 doi: https://doi.org/YY.XXXXX/XXXXXX # replace with actual DOI
 
-build-environment: Multiple computer systems were used to generate these data, including linux, OSX. The open source languages R and Python were used on all systems.
+build-environment: Multiple computer systems were used to generate these data. The open source languages R was used on all systems.
 
 # ----associated publication----
 larger-cites:
   -
-    authors: ["Jordan S. Read", "Xiaowei Jia", "Jared Willard", "Alison P. Appling", "Jacob A. Zwart","Samantha K. Oliver","Anuj Karpatne","Gretchen J.A. Hansen", "Paul C. Hanson", "William Watkins", "Michael Steinbach","Vipin Kumar"]
+    authors: ["XX"]
     title: >-
-      Process-guided deep learning predictions of lake water temperature
+      XX 
     pubdate: 2019
 
 # ----supporting publications----    
 cross-cites:
   -
-    authors: ['Luke A. Winslow','Gretchen J.A. Hansen','Jordan S. Read','Michael Notaro']
+    authors: ['XX']
     title: >-
-      Large-scale modeled contemporary and future water temperature estimates for 10,774 Midwestern U.S. Lakes
+      Include separate citations to NWIS, WQP, EcoSHEDS, NorWeST, and national geospatial fabric
     pubdate: 2017
     link: http://dx.doi.org/10.1038/sdata.2017.53
 
 process-date: !expr format(Sys.time(),'%Y%m%d')
-file-format: a single comma-delimited file and a single zipped shapefile
+file-format: two comma-delimited files and a single zipped shapefile
 
 entities:
   -
-    data-name: example_cars.csv
-    data-description: A csv file containing important information...
+    data-name: daily_stream_temperatures.csv
+    data-description: A zipped csv file containing daily water temperature values for streams across the United States. 
     attributes:
     -
-      attr-label: speed
-      attr-def: definition of column_name_1
-      attr-defs: >-
-        citation or URL of column_name_1. If citation, should appear in cross-cites. Can use NA or "This release"
+      attr-label: site_id
+      attr-def: >-
+        Site identifier from the source database. This is not necessarily a unique identifier, but can be crosswalked with the site metadata file with a combination of source and site_id
+      attr-defs:
       data-min: NA
       data-max: NA
       data-units: NA
     -
-      attr-label: dist
-      attr-def: definition of column_name_2
-      attr-defs: >-
-        citation or URL of column_name_2. If citation, should appear in cross-cites. Can use NA or "This release"
-      data-min: NA
-      data-max: NA
-      data-units: NA
+      attr-label: 
+      attr-def: 
+      attr-defs: 
+      data-min: 
+      data-max: 
+      data-units: 
   -
-    data-name: example_shapefile.zip
-    data-description: A zip file containing...
+    data-name: site_metadata.csv
+    data-description: A csv containing metadata for each temperature monitoring site included in daily_stream_temperatures.csv
     attributes:
     -
       attr-label: x
