--- a/remake.yml
+++ b/remake.yml
@@ -14,36 +14,43 @@ targets:
   all:
     depends:
       - log/sb_posted_files.csv
-    
 
-  sf_spatial_data:
-    command: st_read('example_data/example_shapefile/example_shapefile.shp')
-    depends:
-      - example_data/example_shapefile/example_shapefile.dbf
-      - example_data/example_shapefile/example_shapefile.prj
-      - example_data/example_shapefile/example_shapefile.shx
-  
-  spatial_metadata:
-    command: extract_feature(sf_spatial_data)
     
-  out_data/cars.csv:
-    command: file.copy(from = "example_data/example_cars.csv", 
-      to = target_name, overwrite = TRUE)
+  tmp_data/daily_stream_temperature.rds:
+    command: file.copy(to = target_name, from = I("../2wp-temp-observations/5_data_munge/out/daily_temperatures_qaqc.rds"), overwrite = TRUE)
   
-  out_data/spatial.zip:
-    command: sf_to_zip(zip_filename = target_name, 
-      sf_object = sf_spatial_data, layer_name = I('spatial_data'))
+  out_data/daily_stream_temperature.csv:
+    command: rds_to_csv(in_file = 'tmp_data/daily_stream_temperature.rds', out_file = target_name)
+    
+  tmp_data/site_metadata.rds:
+    command: file.copy(to = target_name, from = I('../2wp-temp-observations/6_network/out/site_stream_crosswalk.rds'), overwrite = TRUE)
+    
+  out_data/site_metadata.csv:
+    command: reduce_metadata(in_file = 'tmp_data/site_metadata.rds', out_file = target_name)
+    
+  #sf_spatial_data:
+   # command: st_read('example_data/example_shapefile/example_shapefile.shp')
+    #depends:
+     # - example_data/example_shapefile/example_shapefile.dbf
+      #- example_data/example_shapefile/example_shapefile.prj
+      #- example_data/example_shapefile/example_shapefile.shx
+  
+  #spatial_metadata:
+   # command: extract_feature(sf_spatial_data)
+  #out_data/spatial.zip:
+    #command: sf_to_zip(zip_filename = target_name, 
+      #sf_object = sf_spatial_data, layer_name = I('spatial_data'))
 
-  out_xml/fgdc_metadata.xml:
-    command: render(filename = target_name,
-      "in_text/text_data_release.yml",
-      spatial_metadata)
+ # out_xml/fgdc_metadata.xml:
+   # command: render(filename = target_name,
+     # "in_text/text_data_release.yml",
+     # spatial_metadata)
     
-  log/sb_posted_files.csv:
-    command: sb_replace_files(filename = target_name, 
-      sb_id = I('5faaac68d34eb413d5df1f22'),
-      "out_data/spatial.zip",
-      "out_data/cars.csv",
-      "out_xml/fgdc_metadata.xml",
-      sources = "src/sb_utils.R")
+ # log/sb_posted_files.csv:
+    #command: sb_replace_files(filename = target_name, 
+    #  sb_id = I('5faaac68d34eb413d5df1f22'),
+    #  "out_data/spatial.zip",
+     # "out_data/cars.csv",
+     # "out_xml/fgdc_metadata.xml",
+      #sources = "src/sb_utils.R")
       
