--- a/remake.yml
+++ b/remake.yml
@@ -5,6 +5,7 @@ packages:
   - readr
   - sbtools
   - sf
+  - zip
 
 sources:
   - src/sb_utils.R
@@ -28,18 +29,15 @@ targets:
   out_data/site_metadata.csv:
     command: reduce_metadata(in_file = 'tmp_data/site_metadata.rds', out_file = target_name)
     
-  #sf_spatial_data:
-   # command: st_read('example_data/example_shapefile/example_shapefile.shp')
-    #depends:
-     # - example_data/example_shapefile/example_shapefile.dbf
-      #- example_data/example_shapefile/example_shapefile.prj
-      #- example_data/example_shapefile/example_shapefile.shx
+  sf_spatial_data:
+    command: create_sf('tmp_data/site_metadata.rds')
   
-  #spatial_metadata:
-   # command: extract_feature(sf_spatial_data)
-  #out_data/spatial.zip:
-    #command: sf_to_zip(zip_filename = target_name, 
-      #sf_object = sf_spatial_data, layer_name = I('spatial_data'))
+  spatial_metadata:
+    command: extract_feature(sf_spatial_data)
+  
+  out_data/spatial.zip:
+    command: sf_to_zip(zip_filename = target_name, 
+      sf_object = sf_spatial_data, layer_name = I('spatial_data'))
 
  # out_xml/fgdc_metadata.xml:
    # command: render(filename = target_name,
