--- a/remake.yml
+++ b/remake.yml
@@ -20,9 +20,12 @@ targets:
   tmp_data/daily_stream_temperature.rds:
     command: file.copy(to = target_name, from = I("../2wp-temp-observations/5_data_munge/out/daily_temperatures_qaqc.rds"), overwrite = TRUE)
   
-  out_data/daily_stream_temperature.csv:
-    command: rds_to_csv(in_file = 'tmp_data/daily_stream_temperature.rds', out_file = target_name)
+  daily_stream_temperature:
+    command: readRDS('tmp_data/daily_stream_temperature.rds')
     
+  out_data/daily_stream_temperature.zip:
+    command: zip_this(out_file = target_name, daily_stream_temperature)
+
   tmp_data/site_metadata.rds:
     command: file.copy(to = target_name, from = I('../2wp-temp-observations/6_network/out/site_stream_crosswalk.rds'), overwrite = TRUE)
     
@@ -39,16 +42,17 @@ targets:
     command: sf_to_zip(zip_filename = target_name, 
       sf_object = sf_spatial_data, layer_name = I('spatial_data'))
 
- # out_xml/fgdc_metadata.xml:
-   # command: render(filename = target_name,
-     # "in_text/text_data_release.yml",
-     # spatial_metadata)
+  out_xml/fgdc_metadata.xml:
+    command: render(filename = target_name,
+      "in_text/text_data_release.yml",
+      spatial_metadata)
     
- # log/sb_posted_files.csv:
-    #command: sb_replace_files(filename = target_name, 
-    #  sb_id = I('5faaac68d34eb413d5df1f22'),
-    #  "out_data/spatial.zip",
-     # "out_data/cars.csv",
-     # "out_xml/fgdc_metadata.xml",
-      #sources = "src/sb_utils.R")
+  log/sb_posted_files.csv:
+    command: sb_replace_files(filename = target_name, 
+      sb_id = I('5f60d95e82ce3550e3c23133'),
+      "out_data/spatial.zip",
+      "out_data/daily_stream_temperature.zip",
+      'out_data/site_metadata.csv',
+      "out_xml/fgdc_metadata.xml",
+      sources = "src/sb_utils.R")
       
