last error in metadata check

--- a/in_text/text_data_release.yml
+++ b/in_text/text_data_release.yml
@@ -117,7 +117,7 @@ entities:
       attr-defs: This data release
       data-min: 1 
       data-max: 124260
-      data-units:
+      data-units: NA
     -
       attr-label: source
       attr-def: >-
